# papete

./: .gitignore  Cargo.toml  arvore.JSON  build.rs  papete.JSON  papete.csv  papete.pt  papete_raw.csv  readme.md
arduino/: papete.ino
custom_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
custom_model/variables/: variables.data-00000-of-00001  variables.index
python/: modelador.py
src/: arvore.rs  avaliacao.rs  conexao.rs  csv_helper.rs  dado_papete.rs  lib.rs  main.rs  movimento.rs  neural.rs  papete.rs  previsor.rs  teste.rs
unity/exemplos/CarroPapete/: Assembly-CSharp.csproj
unity/exemplos/CarroPapete/Assets/: CameraShaker.cs  Objetivo.cs
unity/exemplos/CarroPapete/Assets/Anim/: Carro.controller  Idle.anim
unity/exemplos/CarroPapete/Assets/Arte/: CarroMat.mat  EscapamentoMat.mat  EstradaMat.mat  FaixaMat.mat  FarolMat.mat  GramadoMat.mat  PedraMat.mat  PlacaMat.mat  RodaMat.mat  VidroMat.mat
unity/exemplos/CarroPapete/Assets/Arte/Materials/: faixa.mat
unity/exemplos/CarroPapete/Assets/Papete/Prefabs/: Guia.txt  Papete.prefab  (+4 more)
unity/exemplos/CarroPapete/Assets/Prefabs/: Carro.prefab  Objetivo.prefab
unity/exemplos/CarroPapete/Assets/Scenes/: Jogo.unity  Menu.unity
unity/exemplos/CarroPapete/Assets/Scripts/: Carro.cs  DetectorForaDaTela.cs  Estrada.cs  Menu.cs
unity/exemplos/CarroPapete/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
unity/exemplos/CarroPapete/UserSettings/: EditorUserSettings.asset
unity/exemplos/CarroPapete/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt
(+14 files in other folders)
