[package]
name = "papete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# tree
rustlearn = "0.5"

# salvar structs
serde = "1.0" 
serde_json = "1.0"

# comunicação serial
serialport = "4.2"

linecount = "0.1"

rand = "0.8.5"

# neural network
tch = "0.4.0"

